objects/Research_Agreements__c.object
<CustomObject>
    <description>Research Team tracks status of clients in terms of agreements</description>
    <fields>
        <fullName>Account_Currency__c</fullName>
        <formula>TEXT (Relationship__r.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIFID_II_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MIFID II Client?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Research Agreements</relationshipLabel>
        <relationshipName>Research_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Research_Agr_Suspension_ends__c</fullName>
        <label>Research Agr Suspension ends</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Research_Agreement_Effective__c</fullName>
        <label>Research Agreement Effective</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Research_Agreement_Expiry__c</fullName>
        <label>Research Agreement Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Research_Agreement_Status__c</fullName>
        <label>Research Agreement Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Effective</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Research_Agreement_Suspended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Research Agreement Suspended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Research_Agreement_Type__c</fullName>
        <label>Research Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASA</fullName>
                </value>
                <value>
                    <fullName>CSA</fullName>
                </value>
                <value>
                    <fullName>RPA - Full</fullName>
                </value>
                <value>
                    <fullName>RPA - Trial</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Research Agreement</label>
    <nameField>
        <displayFormat>RA - {0000}</displayFormat>
        <label>Research Agreements Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Research Agreements</pluralLabel>
    <recordTypes>
        <fullName>Research_Research_Agreement</fullName>
        <active>true</active>
        <label>Research - Research Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Research_Agreement</fullName>
        <active>true</active>
        <description>Barclays Standard user, Barclays Business owner, Barclays Private side user</description>
        <label>Standard-Research Agreement</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>